// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module-with-pragma.js 1`] = `
====================================options=====================================
parsers: ["flow", "babel", "typescript"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
/**
 * @flow
 * @format
 */

function      foo(bar)


{

  return bar +
    3 +
  4;
}

=====================================output=====================================
/**
 * @flow
 * @format
 */

function foo(bar) {
  return bar + 3 + 4;
}

================================================================================
`;

exports[`module-without-pragma.js 1`] = `
====================================options=====================================
parsers: ["flow", "babel", "typescript"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
/**
 * @flow
 */

function      foo(bar)


{

  return bar +
    3 +
  4;
}

=====================================output=====================================
/**
 * @flow
 */

function      foo(bar)


{

  return bar +
    3 +
  4;
}

================================================================================
`;

exports[`range-with-pragma.js 1`] = `
====================================options=====================================
parsers: ["flow", "babel", "typescript"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
/**
 * @prettier
 */
var test = true

=====================================output=====================================
/**
 * @prettier
 */
var test = true;

================================================================================
`;

exports[`range-without-pragma.js 1`] = `
====================================options=====================================
parsers: ["flow", "babel", "typescript"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
var test = true

=====================================output=====================================
var test = true

================================================================================
`;
